Fix text alignment inside the cards.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -290,6 +290,7 @@ footer {
   border-radius: 10px;
   color: var(--col-text);
   box-shadow: 0 0 8px 4px rgba(0, 0, 0, var(--shadow-intensity));
+  text-align: left;
 }
 .card:hover {
   text-decoration: none;
@@ -316,6 +317,12 @@ footer {
   right: -8px;
 }
 .ongoing-tag {
+}
+
+.card-title,
+.card-description p {
+  text-align: left;
+  text-justify: auto;
 }
 
 .card-metadata {
